temp gitignore for after CC

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,106 @@ mozilla-config.h
 *.so
 .deps
 _xpidlgen
+
+
+# YY temp
+accessible/build/dependentLibs.h
+build/unix/mozilla-plugin.pc
+caps/src/dependentLibs.h
+db/mork/build/dependentLibs.h
+directory/c-sdk/config/nfspwd
+directory/xpcom/base/src/dependentLibs.h
+docshell/build/dependentLibs.h
+editor/composer/src/dependentLibs.h
+editor/libeditor/build/dependentLibs.h
+editor/txmgr/src/dependentLibs.h
+embedding/browser/build/dependentLibs.h
+embedding/components/build/dependentLibs.h
+embedding/lite/dependentLibs.h
+extensions/cookie/dependentLibs.h
+extensions/inspector/build/src/dependentLibs.h
+extensions/p3p/p3p200005.xsl
+extensions/p3p/p3p200010.xsl
+extensions/p3p/p3p200012.xsl
+extensions/p3p/p3p200109.xsl
+extensions/p3p/p3p200201.xsl
+extensions/p3p/src/dependentLibs.h
+extensions/pref/autoconfig/src/dependentLibs.h
+extensions/spellcheck/myspell/src/dependentLibs.h
+extensions/spellcheck/src/dependentLibs.h
+extensions/transformiix/build/dependentLibs.h
+extensions/typeaheadfind/src/dependentLibs.h
+extensions/universalchardet/src/dependentLibs.h
+extensions/wallet/build/dependentLibs.h
+extensions/wallet/src/dependentLibs.h
+extensions/webservices/build/src/dependentLibs.h
+extensions/webservices/proxy/tests/dependentLibs.h
+extensions/xmlextras/build/src/dependentLibs.h
+gfx/gfx-config.h
+gfx/src/gtk/nsAntiAliasedGlyph.cpp
+gfx/src/gtk/nsFT2FontCatalog.cpp
+gfx/src/gtk/nsFT2FontNode.cpp
+gfx/src/gtk/nsFontFreeType.cpp
+gfx/src/gtk/nsX11AlphaBlend.cpp
+gfx/src/gtk/nsXFontAAScaledBitmap.cpp
+gfx/src/gtk/nsXFontNormal.cpp
+gfx/src/nsPaperPS.cpp
+gfx/src/ps/dependentLibs.h
+htmlparser/src/dependentLibs.h
+htmlparser/tests/grabpage/grabpage
+htmlparser/tests/html/TestParser
+intl/build/dependentLibs.h
+intl/uconv/src/dependentLibs.h
+intl/uconv/ucvmath/dependentLibs.h
+ipc/ipcd/client/src/dependentLibs.h
+js/jsd/dependentLibs.h
+js/src/xpconnect/src/dependentLibs.h
+js/src/xpconnect/tests/components/dependentLibs.h
+layout/build/dependentLibs.h
+mailnews/addrbook/build/dependentLibs.h
+mailnews/base/build/dependentLibs.h
+mailnews/compose/build/dependentLibs.h
+mailnews/db/msgdb/build/dependentLibs.h
+mailnews/extensions/bayesian-spam-filter/build/dependentLibs.h
+mailnews/extensions/mailviews/build/dependentLibs.h
+mailnews/extensions/mdn/build/dependentLibs.h
+mailnews/imap/build/dependentLibs.h
+mailnews/import/comm4x/src/dependentLibs.h
+mailnews/import/src/dependentLibs.h
+mailnews/import/text/src/dependentLibs.h
+mailnews/local/build/dependentLibs.h
+mailnews/mime/build/dependentLibs.h
+mailnews/mime/cthandlers/smimestub/dependentLibs.h
+mailnews/mime/cthandlers/vcard/dependentLibs.h
+mailnews/mime/emitters/build/dependentLibs.h
+mailnews/news/build/dependentLibs.h
+modules/libpref/src/dependentLibs.h
+modules/oji/src/dependentLibs.h
+modules/plugin/base/src/dependentLibs.h
+modules/plugin/samples/simple/dependentLibs.h
+netwerk/test/ReadNTLM
+netwerk/test/TestCookie
+netwerk/test/TestOpen
+netwerk/test/TestServ
+profile/build/dependentLibs.h
+profile/pref-migrator/src/dependentLibs.h
+rdf/build/dependentLibs.h
+rdf/chrome/build/dependentLibs.h
+widget/src/gtk/dependentLibs.h
+widget/src/xremoteclient/dependentLibs.h
+xpcom/glue/standalone/nsTraceRefcnt.cpp
+xpcom/obsolete/component/dependentLibs.h
+xpcom/sample/dependentLibs.h
+xpcom/tests/TestAutoPtr
+xpcom/tests/TestHashtables
+xpcom/tests/TestMinStringAPI
+xpcom/tests/TestStrings
+xpcom/tests/TestThreads
+xpcom/tests/services/dependentLibs.h
+xpfe/appshell/src/dependentLibs.h
+xpfe/bootstrap/nsStackFrameUnix.cpp
+xpfe/bootstrap/nsStackFrameUnix.h
+xpfe/components/build/dependentLibs.h
+xpfe/components/find/src/dependentLibs.h
+xpfe/global/buildconfig.html
+xpinstall/src/dependentLibs.h
